--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,8 +1,28 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:  'Roboto', sans-serif;
   font-size: 14px;
+}
+
+.home {
+  /* background-image:url('chopping-board1.jpg');
+  background-size:cover; */
+  position:relative;
+  background: no-repeat url('chopping-board1.jpg') 50% / 100%;
+}
+
+.home > img {
+  vertical-align: top;
+  width: 100%;
+  opacity: 0;
+}
+
+.home > div {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .instructions .container h1 {
@@ -11,11 +31,35 @@ body, html {
 }
 
 .instructions {
-  background-color: #333333;
+  /* background-color: #333333; */
   color: #DDDDDD;
   padding: 15px;
 }
 
+.loginBox {
+  min-width: 800px;
+  min-height: 300px;
+  /* background-color:gray; */
+  text-align:center;
+  color:black;
+  float:right;
+  margin-right:250px;
+  margin-top:250px;
+
+}
+
+.loginBox > h1 {
+  font-size: 84px;
+  font-weight: 600;
+  text-shadow: 1px 1px grey;
+  margin-bottom: 15px;
+}
+
+.loginBox form {
+  text-align:center;
+  font-weight: 600;
+  text-shadow: 1px 1px grey;
+}
 .container p {
   margin-top : 14px;
 }
