--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -1,21 +1,28 @@
-<header ng-include="'/views/partials/header.html'"></header>
-<div ng-include="'views/partials/nav.html'"></div>
+<!-- <header ng-include="'/views/partials/header.html'"></header> -->
+<!-- <div ng-include="'views/partials/nav.html'"></div> -->
 
-<div class="container">
-  <h1 class="lead">Login</h1>
-    <h1 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
-    <form ng-submit="lc.login()">
-      <div>
+<div class="home">
+  <img src="../styles/chopping-board1.jpg">
+  <div class="">
+
+
+  <div class="loginBox">
+    <h1>Meal-Tracker</h1>
+      <form ng-submit="lc.login()">
+        <div>
           <label for="username">Username:</label>
           <input type="text" ng-model="lc.user.username" />
-      </div>
-      <div>
+        </div>
+        <div>
           <label for="password">Password:</label>
           <input type="password" ng-model="lc.user.password" />
-      </div>
-      <div>
+        </div>
+        <div>
           <input type="submit" name="submit" value="Log In" />
           <a href="#register">Register</a>
-      </div>
-    </form>
-</div>
+        </div>
+      </form>
+      <h1 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
+    </div>
+  </div>
+  </div>
