temp name update

--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -1,10 +1,8 @@
 <div class="home">
   <img src="../styles/chopping-board1.jpg">
   <div class="">
-
-
   <div class="loginBox">
-    <h1>Meal-Tracker</h1>
+    <h1>fit.me</h1>
       <form ng-submit="lc.login()">
         <div>
           <label for="username">Username:</label>
@@ -22,4 +20,17 @@
       <h2 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
     </div>
   </div>
+</div>
+
+<!-- <div class="home">
+  <img src="../styles/chopping-board1.jpg">
+  <div class="">
+  <div class="loginBox">
+    <h1 style='font-family: "Archivo"; margin:5px'>healthfit</h1>
+    <h1 style='font-family: "Roboto", serif; margin:5px'>healthfit</h1>
+    <h1 style='font-family: "Source Sans Pro", serif; margin:5px'>HealthFit</h1>
+    <h1 style='font-family: "Open Sans"; margin:5px'>HealthFit</h1>
+    <h1 style='font-family: "Raleway"; margin:5px'>HealthFit</h1>
+    </div>
   </div>
+</div> -->
