--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -3,6 +3,9 @@ body, html {
   padding: 0;
   font-family:  'Roboto', sans-serif;
   font-size: 14px;
+  background-image:url('board-bg.jpeg');
+  background-size:cover;
+  background-attachment: fixed;
 }
 
 .home {
@@ -25,15 +28,15 @@ body, html {
     height: 100%;
 }
 
-.instructions .container h1 {
-  font-size: 32px;
-  font-weight: 600;
+.instructions {
+  background-color: #333333;
+  color: #DDDDDD;
+  padding: 1px;
 }
 
-.instructions {
-  /* background-color: #333333; */
-  color: #DDDDDD;
-  padding: 15px;
+.instructions h2 {
+  font-size: 30px;
+  text-align:center;
 }
 
 .loginBox {
@@ -52,7 +55,6 @@ body, html {
 .loginBox > h1 {
   font-size: 84px;
   margin-bottom: 15px;
-
 }
 
 .loginBox form {
@@ -69,7 +71,8 @@ body, html {
 }
 
 .navbar {
-  background-color: #333333;
+  /* background-color: #333333; */
+  background-color:black;
   width: 100%;
   border-radius: 0px;
 }
