--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -2,7 +2,7 @@
 <img src="../styles/chopping-board1.jpg">
 <div class="">
 <div class="loginBox">
-  <h1>Register User</h1>
+  <h1>fit.me</h1>
   <h2 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
   <form ng-submit="lc.registerUser()">
     <div>
