--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -1,8 +1,7 @@
 <div class="home">
-<img src="../styles/chopping-board1.jpg">
-<div class="">
+
 <div class="loginBox">
-  <h1>fit.me</h1>
+  <h1>Fit-Tracker</h1>
   <h2 role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
   <form ng-submit="lc.registerUser()">
     <div>
@@ -16,6 +15,6 @@
     <input type="submit" name="submit" value="Register" />
     <a href="#home">Cancel</a>
   </form>
-</div>
+
 </div>
 </div>
