--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -3,22 +3,9 @@ body, html {
   padding: 0;
   font-family:  'Roboto', sans-serif;
   font-size: 14px;
-  background-image:url('board-bg.jpeg');
+  /* background-image:url('board-bg.jpeg');
   background-size:cover;
-  background-attachment: fixed;
-}
-
-.home {
-  /* background-image:url('chopping-board1.jpg');
-  background-size:cover; */
-  position:relative;
-  background: no-repeat url('chopping-board1.jpg') 50% / 100%;
-}
-
-.home > img {
-  vertical-align: top;
-  width: 100%;
-  opacity: 0;
+  background-attachment: fixed; */
 }
 
 .home > div {
@@ -28,28 +15,13 @@ body, html {
     height: 100%;
 }
 
-.instructions {
-  background-color: #333333;
-  color: #DDDDDD;
-  padding: 1px;
-}
-
-.instructions h2 {
-  font-size: 30px;
-  text-align:center;
-}
-
 .loginBox {
   min-width: 800px;
   min-height: 300px;
-  /* background-color:gray; */
-  text-shadow: 1px 1px #D5C4A7;
-  color:#466800;
+  text-shadow: 2px 2px #D5C4A7;
+  color:#319F52;
   text-align:center;
   font-weight: 600;
-  float:right;
-  margin-right:250px;
-  margin-top:250px;
 }
 
 .loginBox > h1 {
@@ -63,7 +35,7 @@ body, html {
 }
 
 .loginBox a {
-  color:#466800;
+  color:#319F52;
 }
 
 .container p {
@@ -71,10 +43,14 @@ body, html {
 }
 
 .navbar {
-  /* background-color: #333333; */
-  background-color:black;
   width: 100%;
-  border-radius: 0px;
+  border-bottom: 1px black solid;
+}
+
+.navbar h2 {
+  margin-left:15px;
+  margin-right:25px;
+  font-size:30px;
 }
 
 ul {
@@ -90,7 +66,6 @@ li {
 
 li a {
   display: block;
-  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
