--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -1,8 +1,7 @@
-<header ng-include="'/views/partials/header.html'"></header>
 <div ng-include="'views/partials/nav.html'"></div>
 
 <div class="container">
   <p>
-    Info
+    TESTING
   </p>
 </div>
