--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -13,7 +13,8 @@
       <div>
       <ul>
         <li><a href="#/user">User Home</a></li>
-        <li><a href="#/info">TESTING</a></li>
+        <li><a href="#/goals">Goals</a></li>
+        <li><a href="#/testing">TESTING</a></li>
       </ul>
       </div>
     </div>
