user goals can be edited

--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -6,7 +6,7 @@
 
   <div layout="column" flex>
     <div layout="row" flex="40" layout-align="end start">
-      <button ng-click="uc.userService.logout()">Log Out</button>
+      <md-button class="md-raised"ng-click="uc.userService.logout()">Log Out</md-button>
     </div>
 
     <div layout="row" flex="60" layout-align="start end">
