--- a/server/public/views/templates/goals.html
+++ b/server/public/views/templates/goals.html
@@ -1,5 +1,17 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
 <div class="container">
-    <h1>Welcome, {{gc.userObject.userName}}!</h1>
+
+  <h1>Current goals for {{gc.userObject.userName}}:</h1>
+  <br>Calories: {{gc.goals.calories[0]}} - {{gc.goals.calories[1]}}
+  <br>Cholesterol: {{gc.goals.cholesterol[0]}} - {{gc.goals.cholesterol[1]}}
+  <br>Carbohydrates: {{gc.goals.carbohydrates[0]}} - {{gc.goals.carbohydrates[1]}}
+  <br>Fat: {{gc.goals.fat[0]}} - {{gc.goals.fat[1]}}
+  <br>Fiber: {{gc.goals.fiber[0]}} - {{gc.goals.fiber[1]}}
+  <br>Protein: {{gc.goals.protein[0]}} - {{gc.goals.protein[1]}}
+  <br>Sodium: {{gc.goals.sodium[0]}} - {{gc.goals.sodium[1]}}
+  <br>Sugar: {{gc.goals.sugar[0]}} - {{gc.goals.sugar[1]}}
+  <br><br>
+
+  <md-button class="md-raised md-primary" type="button" name="button" ng-click="gc.editGoals()">EDIT</md-button>
 </div>
