--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -13,6 +13,7 @@
       <div>
       <ul>
         <li><a href="#/user">User Home</a></li>
+        <li><a href="#/meals">MealTracking</a></li>
         <li><a href="#/goals">Goals</a></li>
         <li><a href="#/testing">TESTING</a></li>
       </ul>
