--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -74,3 +74,18 @@ li a {
 li a:hover {
   text-decoration: underline;
 }
+
+.mealsHead {
+  text-align: center;
+}
+
+.mealsCol {
+  border-right: 1px solid black;
+}
+
+.mealsHead h1 {
+  border-bottom: 1px solid black;
+}
+.mealsCol input{
+  max-width: 40%;
+}
