--- a/server/public/views/templates/meals.html
+++ b/server/public/views/templates/meals.html
@@ -1,5 +1,39 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
-<div class="container">
+<div class="container mealsHead">
     <h1>{{mc.userObject.userName}}'s meal tracking</h1>
+</div>
+
+<div class="mealsMain" layout="row">
+
+  <div class="mealsCol" layout="column" flex="50">
+    <div class="mealsHead">
+      <h1>MEALS</h1>
+    </div>
+    <div class="">
+      ADD A MEAL
+    </div>
+    <br>Name: <input type="text" ng-model="mealName">
+    <br>Servings: <input type="number" ng-model="mealServings">
+    <br>Calories (per serving): <input type="number" ng-model="mc.mealToEnter.calories">
+    <br>Fat(g): <input type="number" ng-model="mc.mealToEnter.fat">
+    <br>Cholesterol(mg): <input type="number" ng-model="mc.mealToEnter.cholesterol">
+    <br>Carbohydrates(g): <input type="number" ng-model="mc.mealToEnter.carbohydrates">
+    <br>Fiber(g): <input type="number" ng-model="mc.mealToEnter.fiber">
+    <br>Sugar(g): <input type="number" ng-model="mc.mealToEnter.sugar">
+    <br>Protein(g): <input type="number" ng-model="mc.mealToEnter.protein">
+    <br>Sodium(mg): <input type="number" ng-model="mc.mealToEnter.sodium">
+    <br><br>
+    <md-button class="md-raised md-primary" type="button" name="button" ng-click="mc.createMealEntry(mealName, mealServings)">SAVE</md-button>
+  </div>
+
+  <div class="mealsTodayCol"layout="column" flex="50">
+    <div class="mealsHead">
+      <h1>TODAY</h1>
+    </div>
+    <div class="">
+      TODAYS MEALS
+    </div>
+  </div>
+
 </div>
