--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -86,6 +86,15 @@ li a:hover {
 .mealsHead h1 {
   border-bottom: 1px solid black;
 }
+
 .mealsCol input{
   max-width: 40%;
+}
+
+.todayList > div{
+  padding:5px;
+}
+
+.totalList > div{
+  padding:5px;
 }
