today meals fixed to only return those entered by user

--- a/server/public/views/partials/mealsDefault.html
+++ b/server/public/views/partials/mealsDefault.html
@@ -1,3 +1,5 @@
 <div class="">
-  <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">MANUALLY ADD SINGLE MEAL</button>
+  <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">MANUALLY ADD SINGLE ITEM</button><br>
+  <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">ADD MULTI-ITEM MEAL</button><br>
+  <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">SEARCH API FOR ITEM</button>
 </div>
