fixed logout button

--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar" layout="row">
+<div class="navbar" layout="row" ng-controller="UserController as uc">
 
   <div class="">
     <h2>Fit-Tracker</h2>
