--- a/server/public/views/partials/addMeal.html
+++ b/server/public/views/partials/addMeal.html
@@ -2,8 +2,9 @@
   ADD A MEAL
 </div>
 <div class="">
-<br>Name: <input type="text" ng-model="mealName">
-<br>Servings: <input type="number" ng-model="mealServings">
+<br>Name: <input type="text" ng-model="mc.mealName">
+<br>Serving size: <input type="text" ng-model="mc.mealServingSize">
+<br>Servings: <input type="number" ng-model="mc.mealServings">
 <br>Calories (per serving): <input type="number" ng-model="mc.mealToEnter.calories">
 <br>Fat(g): <input type="number" ng-model="mc.mealToEnter.fat">
 <br>Cholesterol(mg): <input type="number" ng-model="mc.mealToEnter.cholesterol">
@@ -14,6 +15,6 @@
 <br>Sodium(mg): <input type="number" ng-model="mc.mealToEnter.sodium">
 <br><br>
 <md-button class="md-raised md-primary" type="button" name="button" ng-click="mc.setView('views/partials/mealsDefault.html')">CANCEL</md-button>
-<md-button class="md-raised md-primary" type="button" name="button" ng-click="mc.createMealEntry(mealName, mealServings)">SAVE</md-button>
+<md-button class="md-raised md-primary" type="button" name="button" ng-click="mc.createMealEntry(mc.mealName, mc.mealServingSize, mc.mealServings)">SAVE</md-button>
 
 </div>
