--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -1,5 +1,18 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
 <div class="container">
+  <div class="">
+    test object properties:<br>
+    color: {{tc.testObject.color}}<br>
+    word: {{tc.testObject.word}}<br>
+    number: {{tc.testObject.number}}<br>
+    testVar: {{testVar}}<br>
+
+    <button type="button" name="button" ng-onclick="tc.test()">TEST</button>
+  </div>
+
+<div class="">
+  <button class="btn btn-primary" ng-click="showAdvanced($event)">Create Account</button>
+</div>
 
 </div>
