server sending favorites list to client, favorites displaying on DOM

--- a/server/public/views/partials/addMealTemplate.html
+++ b/server/public/views/partials/addMealTemplate.html
@@ -25,7 +25,8 @@
 
     <md-dialog-actions layout="row">
       <md-button class="md-raised md-primary" type="button" name="button" ng-click="cancel()">CANCEL</md-button>
-      <md-button class="md-raised md-primary" type="button" name="button" ng-click="add(mealName, mealServingSize, mealServings, mealToEnter)">SAVE</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="createEntry(mealName, mealServingSize, mealServings, mealToEnter)">SAVE</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="createEntryFavorite(mealName, mealServingSize, mealServings, mealToEnter)">SAVE AND FAVORITE</md-button>
     </md-dialog-actions>
   </form>
 </md-dialog>
