--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -12,7 +12,7 @@
   </div>
 
 <div class="">
-  <button class="btn btn-primary" ng-click="showAdvanced($event)">Create Account</button>
+  <button class="btn btn-primary" ng-click="showModal($event)">Create Account</button>
 </div>
 
 </div>
