--- a/server/public/views/partials/addMealTemplate.html
+++ b/server/public/views/partials/addMealTemplate.html
@@ -8,19 +8,19 @@
     </md-toolbar>
 
     <md-dialog-content>
-      <div class="container">
-        <br>Name: <input type="text" ng-model="mealName">
-        <br>Serving size: <input type="text" ng-model="mealServingSize">
-        <br>Servings: <input type="number" ng-model="mealServings">
-        <br>Calories (per serving): <input type="number" ng-model="mealToEnter.calories">
-        <br>Fat(g): <input type="number" ng-model="mealToEnter.fat">
-        <br>Cholesterol(mg): <input type="number" ng-model="mealToEnter.cholesterol">
-        <br>Carbohydrates(g): <input type="number" ng-model="mealToEnter.carbohydrates">
-        <br>Fiber(g): <input type="number" ng-model="mealToEnter.fiber">
-        <br>Sugar(g): <input type="number" ng-model="mealToEnter.sugar">
-        <br>Protein(g): <input type="number" ng-model="mealToEnter.protein">
-        <br>Sodium(mg): <input type="number" ng-model="mealToEnter.sodium">
-      </div>
+
+        <div>Name: <input type="text" ng-model="mealName"></div>
+        <div>Serving size: <input type="text" ng-model="mealServingSize"></div>
+        <div>Servings: <input type="number" ng-model="mealServings"></div>
+        <div>Calories (per serving): <input type="number" ng-model="mealToEnter.calories"></div>
+        <div>Fat(g): <input type="number" ng-model="mealToEnter.fat"></div>
+        <div>Cholesterol(mg): <input type="number" ng-model="mealToEnter.cholesterol"></div>
+        <div>Carbohydrates(g): <input type="number" ng-model="mealToEnter.carbohydrates"></div>
+        <div>Fiber(g): <input type="number" ng-model="mealToEnter.fiber"></div>
+        <div>Sugar(g): <input type="number" ng-model="mealToEnter.sugar"></div>
+        <div>Protein(g): <input type="number" ng-model="mealToEnter.protein"></div>
+        <div>Sodium(mg): <input type="number" ng-model="mealToEnter.sodium"></div>
+
     </md-dialog-content>
 
     <md-dialog-actions layout="row">
