--- a/server/public/views/templates/meals.html
+++ b/server/public/views/templates/meals.html
@@ -2,13 +2,17 @@
 
 <div class="mealsMain" layout="row">
 
-  <div class="mealsCol" layout="column" flex="40">
-    <div class="mealsHead">
-      <h1>MEALS</h1>
+  <div class="mealsCol" layout="column" flex="20">
+
+    <div class="">
+
+      <md-button class="md-raised md-primary" ng-click="showModal($event)">Add an Item</md-button><br>
+      <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">Add from Favorites</button><br>
+      <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">Search API for Item</button>
     </div>
-    <md-button class="md-raised md-primary" ng-click="showModal($event)">Add an Item</md-button>
-    <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">Add from Favorites</button><br>
-    <button type="button" name="button" ng-click="mc.setView('views/partials/addMeal.html')">Search API for Item</button>
+
+
+
 
 <div class="">
   <h3 style="text-align:center">FAVORITES</h3>
@@ -21,7 +25,7 @@
 
 <!-- PAGE DIVIDE -->
 
-  <div class="mealsTodayCol" layout="column" flex="60">
+  <div class="mealsTodayCol" layout="column" flex="80">
     <div class="mealsHead">
       <h1>TODAY'S ENTRIES</h1>
     </div>
