--- a/server/public/views/partials/addMealTemplate.html
+++ b/server/public/views/partials/addMealTemplate.html
@@ -7,14 +7,14 @@
       </div>
     </md-toolbar>
 
-    <md-dialog-content>
+    <md-dialog-content class="newEntryDialog">
 
         <div>Name: <input type="text" ng-model="mealName"></div>
         <div>Serving size: <input type="text" ng-model="mealServingSize"></div>
         <div>Servings: <input type="number" ng-model="mealServings"></div>
         <div>Calories (per serving): <input type="number" ng-model="mealToEnter.calories"></div>
         <div>Fat(g): <input type="number" ng-model="mealToEnter.fat"></div>
-        
+
         <div>Carbohydrates(g): <input type="number" ng-model="mealToEnter.carbohydrates"></div>
         <div>Fiber(g): <input type="number" ng-model="mealToEnter.fiber"></div>
         <div>Sugar(g): <input type="number" ng-model="mealToEnter.sugar"></div>
