--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -16,3 +16,18 @@
 </div>
 
 </div>
+<div class="" layout="row" style="background-color:green;padding:5px;min-height:200px">
+  <div class="" layout="column" flex="30" style="background-color:blue">
+    <div class="" layout="row" style="background-color:yellow;padding:5px">
+      <div style="background-color:red; width:33.334789%">
+        30
+      </div>
+      <div style="background-color:blue; width:39.334789%">
+        30
+      </div>
+      <div style="background-color:green; width:11.334789%">
+        30
+      </div>
+    </div>
+  </div>
+</div>
