favorites can be deleted

--- a/server/public/views/partials/addFromFavorites.html
+++ b/server/public/views/partials/addFromFavorites.html
@@ -20,6 +20,8 @@
 
     <md-dialog-actions layout="row">
       <md-button class="md-raised md-primary" type="button" name="button" ng-click="cancel()">Cancel</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="edit()">Edit</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="delete(favObject)">Delete</md-button>
       <md-button class="md-raised md-primary" type="button" name="button" ng-click="addEntry(favObject)">Add</md-button>
 
     </md-dialog-actions>
