--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -1,33 +1,8 @@
 <div ng-include="'views/partials/nav.html'"></div>
 
-<div class="container">
-  <div class="">
-    test object properties:<br>
-    color: {{tc.testObject.color}}<br>
-    word: {{tc.testObject.word}}<br>
-    number: {{tc.testObject.number}}<br>
-    testVar: {{testVar}}<br>
-
-    <button type="button" name="button" ng-onclick="tc.test()">TEST</button>
-  </div>
-
-<div class="">
-  <button class="btn btn-primary" ng-click="showModal($event)">Create Account</button>
-</div>
-
-</div>
-<div class="" layout="row" style="background-color:green;padding:5px;min-height:200px">
-  <div class="" layout="column" flex="30" style="background-color:blue">
-    <div class="" layout="row" style="background-color:yellow;padding:5px">
-      <div style="background-color:red; width:33.334789%">
-        30
-      </div>
-      <div style="background-color:blue; width:39.334789%">
-        30
-      </div>
-      <div style="background-color:green; width:11.334789%">
-        30
-      </div>
-    </div>
-  </div>
+<div style="margin-left:100px; border:1px solid black; border-radius:5px;display: inline-block">
+ <div style="float: left; width: 67px;background-color:green;">Left Stuff</div>
+ <div style="float: left; width: 255px;background-color:blue;">Middle Stuff</div>
+ <div style="float: left; width: 104px;background-color:red;">Right Stuff</div>
+ <br style="clear: left;" />
 </div>
