--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -1,8 +1,3 @@
-<div ng-include="'views/partials/nav.html'"></div>
-
-<div style="margin-left:100px; border:1px solid black; border-radius:5px;display: inline-block">
- <div style="float: left; width: 67px;background-color:green;">Left Stuff</div>
- <div style="float: left; width: 255px;background-color:blue;">Middle Stuff</div>
- <div style="float: left; width: 104px;background-color:red;">Right Stuff</div>
- <br style="clear: left;" />
+<div class="">
+  <input type="text" ng-keyup="tc.apiSearchInstant()" placeholder="Search me" ng-model="tc.apiSearchText">
 </div>
